fix textarea wrap

--- a/client/assets/styles/scss/forms/forms-inputs.scss
+++ b/client/assets/styles/scss/forms/forms-inputs.scss
@@ -1,3 +1,15 @@
+// initial styles
+input,
+textarea {
+
+  &[disabled] {
+    background-color: $gray-lighterest;
+    border-color: $gray-lighter !important; // override any validation
+    color: $gray-lighter;
+  }
+}
+
+
 // defaults
 .input,
 .textarea {
@@ -97,6 +109,16 @@
   }
 }
 
+// label.btn.btn-checkbox
+.btn-checkbox {
+  font-size: 13px;
+    // input.checkbox
+  .checkbox {
+    float: right;
+    margin-left: 12px;
+  }
+}
+
 // hide if upload
 #input-upload {
   position: absolute;
@@ -110,6 +132,10 @@
 
 .textarea {
   padding: 3px 6px;
+
+  &.monospace {
+    white-space: pre;
+  }
 }
 
 // description text
